Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,12 +40,30 @@ It allows users to</p>
 Server is build on express and socket.io is used for webSockets</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="running-the-application" class="anchor" href="#running-the-application" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Running the application</h3>
+
+<p>Requires node and npm to be existing on your system,</p>
+
+<p>Install webpack and babel-cli</p>
+
+<pre><code>sudo npm install webpack --global
+sudo npm install babel-cli --global
+</code></pre>
+
+<p>Running the app</p>
+
+<pre><code>cd web_app/web
+
+npm install
+
+npm start
+</code></pre>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>This is an open-source project, feel free to customize the UI or add more features on the existing platform
- ### Authors and Contributors</p>
-
-<p>Made by Tharun (<a href="https://github.com/tharunsikhinam" class="user-mention">@tharunsikhinam</a>). 2016 -&gt; no copyrights :P</p>
+Made by Tharun (<a href="https://github.com/tharunsikhinam" class="user-mention">@tharunsikhinam</a>). 2016 -&gt; no copyrights :P</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
